# QuickBluetooth

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Examples/BLEHealthPeripheral/: CMakeLists.txt  CustomBLEPeripheral.qml  Dashboard.qml  Main.qml  main.cpp
Examples/BLEHealthTracker/: CMakeLists.txt  CustomBLECentral.qml  Dashboard.qml  DataCard.qml  Main.qml  SearchDevicePopup.qml  main.cpp
Src/: BLECentral.cpp  BLECentral.h  BLECentral.hpp  BLEDataService.cpp  BLEDataService.h  BLEPeripheral.cpp  BLEPeripheral.h  BLEPeripheral.hpp  BLERole.cpp  BLERole.h  BLERole.hpp  BluetoothController.cpp  BluetoothController.h  BluetoothDeviceInfo.cpp  BluetoothDeviceInfo.h  BluetoothDiscovery.cpp  BluetoothDiscovery.h  BluetoothDiscovery.hpp
Src/BLE/: BLEController.cpp  BLEController.h
